@@ -1,5 +1,5 @@
-@import url(//fonts.googleapis.com/css?family=Source+Sans+Pro:400,400italic,300,300italic,700,600);
-@import url(//fonts.googleapis.com/css?family=Roboto+Slab:100,300,400,700);
+@import url(https://fonts.googleapis.com/css?family=Source+Sans+Pro:400,400italic,300,300italic,700,600);
+@import url(https://fonts.googleapis.com/css?family=Roboto+Slab:100,300,400,700);
 
 $font-body: 'Source Sans Pro', sans-serif;
 $font-header: 'Roboto Slab', serif;
